# fiber-scripts

./: Cargo.toml  README.md  checksums.txt
contracts/commitment-lock/: Cargo.toml  README.md  build.rs
contracts/commitment-lock/src/: main.rs
contracts/funding-lock/: Cargo.toml  Makefile
contracts/funding-lock/src/: main.rs
contracts/liquidity-lock/: Cargo.toml  Makefile
contracts/liquidity-lock/src/: main.rs
deployment/mainnet/: mainnet.json  mainnet.toml
deployment/mainnet/migrations/: 2025-02-28-114908.json  2025-04-14-021754.json  2026-01-14-030304.json
deployment/testnet/: testnet.json
deployment/testnet/migrations/: 2025-02-28-111246.json  2025-04-13-023335.json  2025-11-25-060540.json
scripts/: reproducible_build_docker
tests/: Cargo.toml
tests/src/: tests.rs
