[package]
name = "commitment-lock"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-std = "0.18"
ckb-hash = { version = "0.202.0", default-features = false, features = ["ckb-contract"] }
hex = { version = "0.4", default-features = false, features = ["alloc"]}
sha2 = { version = "0.10", default-features = false }

[build-dependencies]
ckb-gen-types = "0.202.0"
